force-app/main/default/objects/Gridding__c/Gridding__c.object-meta.xml
<CustomObject>
    <label>Gridding</label>
    <nameField>
        <label>网格名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Griddings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>