force-app/main/default/objects/Gridding__c/fields/CountryOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>CountryOfOrigin__c</fullName>
    <formula>if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name), Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name,
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name), Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name, 
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name), Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Name,
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Name), Parent_Gridding__r.Parent_Gridding__r.Name,
if(!ISBLANK(Parent_Gridding__r.Name), Parent_Gridding__r.Name,
if(!ISBLANK(Name), Name, &apos;&apos; ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Of Origin</label>
    <type>Text</type>
</CustomField>