force-app/main/default/objects/Gridding__c/fields/CountryOfOriginT__c.field-meta.xml
<CustomField>
    <fullName>CountryOfOriginT__c</fullName>
    <label>Country Of OriginT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>