force-app/main/default/objects/Gridding__c/fields/DivisionUnit__c.field-meta.xml
<CustomField>
    <fullName>DivisionUnit__c</fullName>
    <label>行政区划单位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>国家</fullName>
            </value>
            <value>
                <fullName>大区</fullName>
            </value>
            <value>
                <fullName>都道府県名</fullName>
                <label>省</label>
            </value>
            <value>
                <fullName>市</fullName>
            </value>
            <value>
                <fullName>区</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>