force-app/main/default/objects/Gridding__c/fields/Grid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grid Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Griddings</relationshipName>
    <type>Lookup</type>
</CustomField>