force-app/main/default/objects/Gridding__c/fields/Gridding_All__c.field-meta.xml
<CustomField>
    <fullName>Gridding_All__c</fullName>
    <formula>if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Gridding_Code__c),Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Gridding_Code__c),Gridding_Code__c,&apos;&apos; )</formula>
    <label>网格所有层级</label>
    <type>Text</type>
</CustomField>