force-app/main/default/objects/Gridding__c/fields/Gridding_Code__c.field-meta.xml
<CustomField>
    <fullName>Gridding_Code__c</fullName>
    <externalId>true</externalId>
    <label>网格编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>