force-app/main/default/objects/Gridding__c/fields/Gridding_Level__c.field-meta.xml
<CustomField>
    <fullName>Gridding_Level__c</fullName>
    <label>网格等级</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>