force-app/main/default/objects/Gridding__c/fields/Gridding_Recursion_ID__c.field-meta.xml
<CustomField>
    <fullName>Gridding_Recursion_ID__c</fullName>
    <description>岗位 网格选择功能使用 PositionCreateController</description>
    <formula>if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id),Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Id + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Parent_Gridding__r.Id),Parent_Gridding__r.Parent_Gridding__r.Id + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Parent_Gridding__r.Id),Parent_Gridding__r.Id + &apos;-&apos;,&apos;&apos; ) +
if(!ISBLANK(Id),Id,&apos;&apos; )</formula>
    <label>*网格递归Id</label>
    <type>Text</type>
</CustomField>