force-app/main/default/objects/Gridding__c/fields/Parent_Gridding__c.field-meta.xml
<CustomField>
    <fullName>Parent_Gridding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>上级网格</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>网格</relationshipLabel>
    <relationshipName>Parent_Gridding</relationshipName>
    <type>Lookup</type>
</CustomField>