force-app/main/default/objects/Gridding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DivisionUnit__c</columns>
    <columns>Parent_Gridding__c</columns>
    <columns>Gridding_Level__c</columns>
    <columns>Gridding_Num__c</columns>
    <columns>CountryOfOriginT__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>