force-app/main/default/objects/Gridding__c/listViews/Australia.listView-meta.xml
<ListView>
    <fullName>Australia</fullName>
    <columns>NAME</columns>
    <columns>Parent_Gridding__c</columns>
    <columns>DivisionUnit__c</columns>
    <columns>Grid_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryOfOrigin__c</field>
        <operation>contains</operation>
        <value>AU</value>
    </filters>
    <label>Australia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AU_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>