force-app/main/default/objects/Gridding__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>NAME</columns>
    <columns>Parent_Gridding__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryOfOriginT__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Canada_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>