force-app/main/default/objects/Gridding__c/listViews/Mexico.listView-meta.xml
<ListView>
    <fullName>Mexico</fullName>
    <columns>NAME</columns>
    <columns>Parent_Gridding__c</columns>
    <columns>DivisionUnit__c</columns>
    <columns>Grid_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryOfOrigin__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>Mexico</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Mexico_HPMMD</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>